# hello

./: .gitignore  README.md  build.sh  clean.sh  layers.sh  ls.sh  pull.sh  push.sh  run.sh
c/: Dockerfile  hello.c
ccl/: Dockerfile  build.cl  hello.cl
chez/: Dockerfile  hello.sch
cr/: Dockerfile  hello.cr  targets
d/: Dockerfile  hello.d
ecl/: Dockerfile  build.cl  hello.cl
ex/: Dockerfile  hello-process.ex  hello.ex  mix.exs
ex/lib/: hello.ex
ex/test/: hello_test.exs
gerbil/: Dockerfile  hello.sc
go/: Dockerfile  hello  hello.go
hs/: CHANGELOG.md  Dockerfile  hello.cabal
janet/: Dockerfile  hello.janet  project.janet  targets
jl/: Dockerfile  hello.jl
nim/: Dockerfile  hello.nim
py/: Dockerfile  hello.py  targets
rkt/: Dockerfile  hello.rkt
rust/: Cargo.toml  Dockerfile
sbcl/: Dockerfile  build.cl  hello.cl
v/: Dockerfile  hello.v
zig/: Dockerfile  hello.zig
