cabal-version:      2.4
name:               hello
version:            0.0.1
synopsis:           Write and compile a static Hello from X

-- A longer description of the package.
-- description:
homepage:           https://github.com/seanharrison/hello

-- A URL where users can report bugs.
-- bug-reports:
license:            MPL-2.0
license-file:       LICENSE
author:             Sean Harrison
maintainer:         sah@kruxia.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hello
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
